# ev3_nanhes

./: .env.example  .gitignore  CLAUDE.md  MORTSTAT_VALIDATION_REPORT_FINAL.txt  Makefile  NHANES_Mortality_Analysis.ipynb  PLAN.md  README.md  analyze_fwf_structure.py  analyze_mortality_format.py  analyze_mortstat_structure.py  analyze_nhanes_variables.py  balanced_logistic_report.txt  baseline_dataset_report.txt  baseline_model_report.txt  branch_sync_audit.txt  cleaning_strategy_report.txt  cleanup_and_nav_report.txt  docker-compose.yml  download_nhanes.py  env.example  executive_view_report.txt  explain_integration_report.txt  feature_expanded_logistic_report.txt  feature_schema.json  frontend_initial_audit.txt  frontend_loading_style_fix_report.txt  frontend_setup_report.txt  fwf_analysis.txt  generate_codes_report.py  git_history_explain_report.txt  inspect_datasets.py  inspect_mortality_seqn.py  investigate_mortality_versions.py  investigate_versions_complete.py  merge_datasets.py  merge_report.txt  metrics_page_report.txt  model_dataset_preparation_report.txt  mortality_validation_report.txt  (+20 more)
.github/workflows/: ci.yml
api/: Dockerfile  README.md  __init__.py  auth.py  db.py  mailer.py  main.py  model_registry.py  report.py  requirements.txt  schema.py
conf/: logging.yml
conf/base/: catalog.yml  catalog_2013_2014.yml  catalog_2015.yml  catalog_combined.yml  catalog_mortality.yml  catalog_nhanes_2013.yml  catalog_serving.yml  parameters_2013_2014.yml  parameters_load_db.yml  parameters_nhanes_2013.yml  parameters_nhanes_2015.yml
dashboards/: app.py
deploy/: setup-ec2.sh
deploy/nginx/: tuedad.me.conf
deploy/systemd/: ev3-api.service  ev3-web.service
docs/: README.md  api.md  arquitectura.md  despliegue.md  informe_estudio_defensa.md  manual_usuario.md  modelo.md  nhanes_inspection_report.txt  prediccion_mortalidad.md
docs/source/: conf.py  index.rst
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
notebooks/: 01_alvaro_EDA_2015.ipynb  01_eda_and_preprocessing.ipynb  01_extraccion_y_carga (1).ipynb  01_nicholas_EDA_Extraccion_2013.ipynb  02_alvaro_Preprocesamiento_2015.ipynb  02_nicholas_Preprocesamiento_2013.ipynb  02_procesamiento_y_features.ipynb  03_alvaro_NoSupervisado_2015.ipynb  03_modelado_y_evaluacion.ipynb  03_nicholas_NoSupervisado_2013.ipynb  04_alvaro_Clasificacion_2015.ipynb  04_nicholas_Clasificacion_2013.ipynb  05_alvaro_Regresion_2015.ipynb  05_nicholas_Regresion_2013.ipynb
tests/: test_api.py  test_run.py
web/: .dockerignore  .env.local.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/app/: globals.css  (+2 more)
(+53 files in other folders)
