[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "ev3_nhanes"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.4.0",
    "pandas>=2.3.3",
    "kedro-datasets[pandas,text]>=9.4.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pyreadstat>=1.2",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "shap>=0.46",
]

[project.scripts]
"ev3-nhanes" = "ev3_nhanes.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
    "httpx>=0.27",
]

[tool.setuptools.dynamic]
version = { attr = "ev3_nhanes.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "ev3_nhanes"
project_name = "ev3_nhanes"
kedro_init_version = "1.4.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = """
--cov-report term-missing \
--cov src/ev3_nhanes -ra"""
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
    "ignore:The set_bad function will be deprecated:PendingDeprecationWarning",
    "ignore:The set_over function will be deprecated:PendingDeprecationWarning",
    "ignore:The set_under function will be deprecated:PendingDeprecationWarning",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests: fijan env vars antes de importar la API (E402), comparan contra códigos
# HTTP literales (PLR2004) y usan imports locales en fixtures (PLC0415).
"tests/**" = ["E402", "PLR2004", "PLC0415"]
"notebooks/*" = ["T201", "I001", "F401", "F541", "W293", "W291", "E741", "E401", "PLR2004"]

[tool.kedro_telemetry]
project_id = "1d9544956d184c9096e30e2f92482260"